--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Carousel</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  
+
+  <div class="container">
+    <div class="cont-image">
+      <img src="./img/01.webp" alt="">
+      <a href=""><i class="fa-solid fa-arrow-up icon-up"></i></a>
+      <a href=""><i class="fa-solid fa-arrow-down icon-down"></i>v</a>
+    </div>
+  </div>
+
   <script src="./js/app.js"></script>
 </body>
 </html>
