--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
   <div class="container">
     <div class="cont-image">
+      <div class="sliders">
+
+      </div>
+      <span class="click-up"><i class="fa-solid fa-arrow-up icon-up"></i></span>
+      <span class="click-down"><i class="fa-solid fa-arrow-down icon-down"></i></span>
     </div>
   </div>
 
